dxr/tests/trybuild/tuple.stderr
error: Deriving TryFromValue for tuple structs is not supported.
 --> tests/trybuild/tuple.rs:4:12
  |
4 | pub struct TupleStruct(String);
  |            ^^^^^^^^^^^
