dxr/tests/trybuild/tuple.rs
use dxr::TryFromValue;

#[derive(TryFromValue)]
pub struct TupleStruct(String);

fn main() {}
